--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Studex - Esplora i nostri progetti interattivi e innovativi.">
-    <title>Studex - Progetti</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Assicurati che il file esista -->
+    <title>Studex</title>
+    <link rel="stylesheet" href="styles.css">
+    <!-- Aggiungi GSAP, necessario per le animazioni -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollToPlugin.min.js"></script>
 </head>
 <body>
     <button id="project-close">X</button>
@@ -23,7 +26,6 @@
                 <img src="https://images.unsplash.com/photo-1545156521-77bd85671d30?ixlib=rb-1.2.1&q=85&fm=jpg" alt="Nebulosa spaziale">
             </section>
         </article>
-
         <article class="project-item" data-index="1">
             <header class="project-hero">
                 <figure class="project-image">
@@ -36,7 +38,6 @@
                 <img src="https://images.unsplash.com/photo-1446776899648-aa78eefe8ed0?ixlib=rb-1.2.1&q=85&fm=jpg" alt="Vista naturale della Terra">
             </section>
         </article>
-
         <article class="project-item" data-index="2">
             <header class="project-hero">
                 <figure class="project-image">
@@ -49,7 +50,6 @@
                 <img src="https://images.unsplash.com/photo-1521228107652-a171fc81bb4f?ixlib=rb-1.2.1&q=85&fm=jpg" alt="Comunità interconnessa">
             </section>
         </article>
-
         <article class="project-item" data-index="3">
             <header class="project-hero">
                 <figure class="project-image">
@@ -66,4 +66,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
