--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Studex - Esplora i nostri progetti interattivi e innovativi.">
     <title>Studex</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="script.js"></script>
     <!-- Aggiungi GSAP, necessario per le animazioni -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollToPlugin.min.js"></script>
