--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- Aggiungi GSAP, necessario per le animazioni -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollToPlugin.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/EasePack.min.js"></script>
 </head>
 <body>
     <button id="project-close">X</button>
