--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Studex - Esplora i nostri progetti interattivi e innovativi.">
-    <title>Studex</title>
+    <title>Studex - Progetti</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
-    <!-- Aggiungi GSAP, necessario per le animazioni -->
+    <!-- Librerie GSAP -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollToPlugin.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/EasePack.min.js"></script>
@@ -65,6 +64,8 @@
             </section>
         </article>
     </div>
+    
+    <!-- Script alla fine del body -->
     <script src="script.js"></script>
 </body>
 </html>
